changed Panel from using flex to fixed width's, more padding and margin media queries added for 404 page, footer decreased in height since it was too big at (max-width: 640px)

--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -10,7 +10,7 @@
   */
   font-size: 400px;
   text-align: center;
-  margin: 60px auto;
+  margin: 100px auto 60px;
 }
 
 .error-container p {
@@ -24,8 +24,31 @@
   color: #808080;
 }
 
+@media (max-width: 1520px) {
+  .error-container h1 {
+    margin-top: 75px; 
+  }
+}
+
+@media (max-width: 1250px) {
+  .error-container h1 {
+   margin: 55px auto 80px;
+  }
+}
+
+@media (max-width: 900px) {
+  .error-container h1 {
+    margin-top: 45px;
+  }
+}
+
 @media (max-width: 640px) {
   .error-container h1 {
     margin: 15px auto;
+  }
+
+  .error-container p {
+    margin-top: -10px;
+    padding-bottom: 40px;
   }
 }
