--- a/src/footer.css
+++ b/src/footer.css
@@ -119,7 +119,7 @@
 
 @media (max-width: 640px) {
   .footer {
-    height: 240px;
+    height: 220px;
     margin-top: 50px;
   }
 
@@ -133,13 +133,14 @@
     float: left;
     width: 100%;
     text-align: center;
-    order: 1;
+    order: 3;
   }
 
   .footer nav {
     float: left;
     width: 100%;
-    order: 2;
+    order: 1;
+    margin: -20px auto 0px;
   }
 
   .footer nav ul {
@@ -155,6 +156,7 @@
     float: left;
     width: 100%;
     text-align: center;
-    order: 3;
+    order: 2;
+    padding-bottom: 25px;
   }
 }
